Crucible Editor launching.